--- a/config/compute-service.properties
+++ b/config/compute-service.properties
@@ -2,5 +2,5 @@ spring.application.name=compute-service
 
 
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8080/eureka-server/
+eureka.client.serviceUrl.defaultZone=http://localhost:8080/eureka-server/eureka/
 
