--- a/config/compute-service.properties
+++ b/config/compute-service.properties
@@ -1,6 +1,6 @@
 spring.application.name=compute-service
 
+server.port = 9999
 
-
-eureka.client.serviceUrl.defaultZone=http://localhost:8080/eureka-server/eureka/
+eureka.client.serviceUrl.defaultZone: http://localhost:8080/eureka-server/eureka/
 
